--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Aprender a aprender</title>
 </head>
 <body>
-  <div class="page">
     <header class="header">
-
-    </header>
+      <div class="page">
+      <div class="logo">
+        <img class="logo_place_header" src= "images/logo_place_header.png" alt="logo-header"></div>
+      <h1 class="header__title">Aprender a aprender</h1> 
+      <h2 class="header-subtitle">Las técnicas de aprendizaje más eficaces y avanzadas que puedes aplicar en tu vida diaria
+       <a  href="#" class="mas-informacion__link mas-informacion__link_active" > mas informacion > </a>
+      </h2> 
+      <div class="main-illusrration">
+        <img class="header-image" src="images/header-image.png" alt="En la cima"></div>  
+        <div class="square-pic"></div>
+      </div>
+      </header>
     <main class="content">
       <section class="description">
       </section>
