--- a/index.html
+++ b/index.html
@@ -1,91 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aprender a aprender</title>
-  <link rel="stylesheet" href="./styles/style.css">
- </head>
- <body>
-  <div class="page">
-    <header class="header">
-        <img class="logo_place_header" src= "images/logo_place_header.png" alt="logo Tripleten">
-      <h1 class="header__title">Aprender a aprender</h1> 
-      <h2 class="header__subtitle">Las técnicas de aprendizaje más eficaces y avanzadas que puedes aplicar en tu vida diaria.
-       <a  href="#" class="header__link" > mas informacion → </a>
-      </h2> 
-      <img class="header__main-illustration" src="images/header-image.png" alt="persona parada sobre una montaña">  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aprender a aprender</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img
+          class="logo_place_header"
+          src="images/logo_place_header.png"
+          alt="logo Tripleten"
+        />
+        <h1 class="header__title">Aprender a aprender</h1>
+        <h2 class="header__subtitle">
+          Las técnicas de aprendizaje más eficaces y avanzadas que puedes
+          aplicar en tu vida diaria.
+          <a href="#" class="header__link"> mas informacion → </a>
+        </h2>
+        <img
+          class="header__main-illustration"
+          src="images/header-image.png"
+          alt="persona parada sobre una montaña"
+        />
         <div class="header__square"></div>
-      </div>
       </header>
+    </div>
     <main class="content">
       <section class="description">
-      <div class="two-columns">
-      <h2 class="two-columns__brief"> El principal problema de la educación</h2>
-      <div class="two-columns__main-text" > 
-      <p class="two-columns__paragraph" > Ya sea en la escuela o en la universidad, lo único que nadie te enseña es a enseñarte a ti mismo. Muchas veces acabamos haciendo ejercicios específicos y memorizando información sin pensar, para que cuando llegue la hora del examen, aprobemos la prueba. Pero una vez terminada la prueba, esa información ya no tiene utilidad, y no hay garantía de que se conserve. Al final, solo estamos aprendiendo a pasar las pruebas.</p>
-      <p class="two-columns__paragraph" > 
-        <span class="span-accent">está la verdadera pregunta:</span> ¿este enfoque de repetición y memorización nos ayuda a comprender realmente la materia? El consenso académico actual es que no. En realidad, lo que es más importante que cualquier tema individual es saber cómo estudiar, pero por alguna razón, este punto a menudo se pasa por alto. Entonces, ¿qué podemos hacer para remediarlo? </p>
-        <p class="two-columns__paragraph" >Bien, hay varias técnicas y ejercicios que pueden aplicarse al proceso educativo para ayudar a hacerlo más eficiente y atractivo. Continúa avanzando para descubrir algunos de los secretos del aprendizaje eficaz. </p>
-      </div>
-      </div>
+        <div class="two-columns">
+          <h2 class="two-columns__brief">
+            El principal problema de la educación
+          </h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              Ya sea en la escuela o en la universidad, lo único que nadie te
+              enseña es a enseñarte a ti mismo. Muchas veces acabamos haciendo
+              ejercicios específicos y memorizando información sin pensar, para
+              que cuando llegue la hora del examen, aprobemos la prueba. Pero
+              una vez terminada la prueba, esa información ya no tiene utilidad,
+              y no hay garantía de que se conserve. Al final, solo estamos
+              aprendiendo a pasar las pruebas.
+            </p>
+            <p class="two-columns__paragraph">
+              <span class="span-accent">está la verdadera pregunta:</span> ¿este
+              enfoque de repetición y memorización nos ayuda a comprender
+              realmente la materia? El consenso académico actual es que no. En
+              realidad, lo que es más importante que cualquier tema individual
+              es saber cómo estudiar, pero por alguna razón, este punto a menudo
+              se pasa por alto. Entonces, ¿qué podemos hacer para remediarlo?
+            </p>
+            <p class="two-columns__paragraph">
+              Bien, hay varias técnicas y ejercicios que pueden aplicarse al
+              proceso educativo para ayudar a hacerlo más eficiente y atractivo.
+              Continúa avanzando para descubrir algunos de los secretos del
+              aprendizaje eficaz.
+            </p>
+          </div>
+        </div>
       </section>
       <section class="digits">
-      <h2 class="section__title" > Datos y figuras</h2>
-      <h3 class="section__subtitle" >El aprendizaje y el cerebro </h3>
-      <ul class="table" >
-       <li class="table__cell" >
-        <h4 class="table__heading" > 86 billones </h4>
-        <p class="table__text" >número de neuronas en el cerebro humano</p> 
-        </li>
-         <li class="table__cell">
-          <h5 class="table__heading">73 %</h5>
-          <p class="table__text"> Porcentaje de adultos en EE. UU. que se consideran alumnos de por vida </p>
-          <p> - Pew Research Center</p>
-        </li>
-        <li class="table__cell"> 
-        <h6 class="table__heading"> 1000 terabytes</h6>
-        <p class="table__text" > La capacidad de almacenamiento de información de un ser humano</p>
-        </li>
-        <li class="table__cell"> 
-        <h7 class="table__heading"> 500 trillones</h7>
-        <p class="table__text" > El número de sinapsis nerviosas responsables del aprendizaje en un ser humano adulto medio</p>
-        </li>
-        <li class="table__cell"> 
-          <h8 class="table__heading"> 420 millones</h8>
-          <p class="table__text" > El número de adultos menores de 25 años con una educación insuficiente para encontrar empleo. </p>
-            <p> Banco Mundial, 2017</p>
-          
+        <h2 class="section__title">Datos y figuras</h2>
+        <h3 class="section__subtitle">El aprendizaje y el cerebro</h3>
+        <ul class="table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 billones</h4>
+            <p class="table__text">número de neuronas en el cerebro humano</p>
           </li>
-          <li class="table__cell"> 
+          <li class="table__cell">
+            <h5 class="table__heading">73 %</h5>
+            <p class="table__text">
+              Porcentaje de adultos en EE. UU. que se consideran alumnos de por
+              vida
+            </p>
+            <p>- Pew Research Center</p>
+          </li>
+          <li class="table__cell">
+            <h6 class="table__heading">1000 terabytes</h6>
+            <p class="table__text">
+              La capacidad de almacenamiento de información de un ser humano
+            </p>
+          </li>
+          <li class="table__cell">
+            <h7 class="table__heading"> 500 trillones</h7>
+            <p class="table__text">
+              El número de sinapsis nerviosas responsables del aprendizaje en un
+              ser humano adulto medio
+            </p>
+          </li>
+          <li class="table__cell">
+            <h8 class="table__heading"> 420 millones</h8>
+            <p class="table__text">
+              El número de adultos menores de 25 años con una educación
+              insuficiente para encontrar empleo.
+            </p>
+            <p>Banco Mundial, 2017</p>
+          </li>
+          <li class="table__cell">
             <h9 class="table__heading"> 26 años</h9>
-            <p class="table__text" > La edad a la que Albert Einstein publicó su innovador artículo sobre la relatividad especial</p>
-            </li>
-            <li class="table__cell"> 
-              <h10 class="table__heading"> 1885</h10>
-              <p class="table__text" > Desarrollo de la curva del olvido</p>
-              </li>
-              <li class="table__cell"> 
-                <h11 class="table__heading"> 1897</h11>
-                <p class="table__text" > Publicación de las investigaciones de Ivan Pavlov sobre el condicionamiento clásico</p>
-                </li>
-              </ul>
+            <p class="table__text">
+              La edad a la que Albert Einstein publicó su innovador artículo
+              sobre la relatividad especial
+            </p>
+          </li>
+          <li class="table__cell">
+            <h10 class="table__heading"> 1885</h10>
+            <p class="table__text">Desarrollo de la curva del olvido</p>
+          </li>
+          <li class="table__cell">
+            <h11 class="table__heading"> 1897</h11>
+            <p class="table__text">
+              Publicación de las investigaciones de Ivan Pavlov sobre el
+              condicionamiento clásico
+            </p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
-      <h2 class="feynman__title" >La técnica Feynman</h2>
-      <h3 class="feynman__subtitle"> Aprender sin olvidar</h3>
-      <a  href="#" class="feynman__link" > mas → </a>
-      <img  class="feynman__photo" src="images/feynman.png" alt="feynman primer plano" >
-      <div class="feynman__circle" ></div>
+        <h2 class="feynman__title">La técnica Feynman</h2>
+        <a href="#" class="feynman__link"> mas → </a>
+        <h3 class="feynman__subtitle">Aprender sin olvidar</h3>
+
+        <div class="feynman__circle"></div>
+        <figure>
+          <img
+            class="feynman__photo"
+            src="images/feynman.png"
+            alt="feynman primer plano"
+          />
+        </figure>
       </section>
 
-      <section class="kaufman">
-      </section>
+      <section class="kaufman"></section>
     </main>
-    <footer class="footer">
-
-    </footer>
-  </div>
-</body>
+    <footer class="footer"></footer>
+  </body>
 </html>
