--- a/index.html
+++ b/index.html
@@ -1,91 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aprender a aprender</title>
-  <link rel="stylesheet" href="./styles/style.css">
- </head>
- <body>
-  <div class="page">
-    <header class="header">
-        <img class="logo_place_header" src= "images/logo_place_header.png" alt="logo Tripleten">
-      <h1 class="header__title">Aprender a aprender</h1> 
-      <h2 class="header__subtitle">Las técnicas de aprendizaje más eficaces y avanzadas que puedes aplicar en tu vida diaria.
-       <a  href="#" class="header__link" > mas informacion → </a>
-      </h2> 
-      <img class="header__main-illustration" src="images/header-image.png" alt="persona parada sobre una montaña">  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aprender a aprender</title>
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img
+          class="logo_place_header"
+          src="images/logo_place_header.png"
+          alt="logo Tripleten"
+        />
+        <h1 class="header__title">Aprender a aprender</h1>
+        <h2 class="header__subtitle">
+          Las técnicas de aprendizaje más eficaces y avanzadas que puedes
+          aplicar en tu vida diaria.
+          <a href="#" class="header__link"> mas informacion → </a>
+        </h2>
+        <img
+          class="header__main-illustration"
+          src="images/header-image.png"
+          alt="persona parada sobre una montaña"
+        />
         <div class="header__square"></div>
-      </div>
       </header>
+    </div>
     <main class="content">
       <section class="description">
-      <div class="two-columns">
-      <h2 class="two-columns__brief"> El principal problema de la educación</h2>
-      <div class="two-columns__main-text" > 
-      <p class="two-columns__paragraph" > Ya sea en la escuela o en la universidad, lo único que nadie te enseña es a enseñarte a ti mismo. Muchas veces acabamos haciendo ejercicios específicos y memorizando información sin pensar, para que cuando llegue la hora del examen, aprobemos la prueba. Pero una vez terminada la prueba, esa información ya no tiene utilidad, y no hay garantía de que se conserve. Al final, solo estamos aprendiendo a pasar las pruebas.</p>
-      <p class="two-columns__paragraph" > 
-        <span class="span-accent">está la verdadera pregunta:</span> ¿este enfoque de repetición y memorización nos ayuda a comprender realmente la materia? El consenso académico actual es que no. En realidad, lo que es más importante que cualquier tema individual es saber cómo estudiar, pero por alguna razón, este punto a menudo se pasa por alto. Entonces, ¿qué podemos hacer para remediarlo? </p>
-        <p class="two-columns__paragraph" >Bien, hay varias técnicas y ejercicios que pueden aplicarse al proceso educativo para ayudar a hacerlo más eficiente y atractivo. Continúa avanzando para descubrir algunos de los secretos del aprendizaje eficaz. </p>
-      </div>
-      </div>
+        <div class="two-columns">
+          <h2 class="two-columns__brief">
+            El principal problema de la educación
+          </h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              Ya sea en la escuela o en la universidad, lo único que nadie te
+              enseña es a enseñarte a ti mismo. Muchas veces acabamos haciendo
+              ejercicios específicos y memorizando información sin pensar, para
+              que cuando llegue la hora del examen, aprobemos la prueba. Pero
+              una vez terminada la prueba, esa información ya no tiene utilidad,
+              y no hay garantía de que se conserve. Al final, solo estamos
+              aprendiendo a pasar las pruebas.
+            </p>
+            <p class="two-columns__paragraph">
+              <span class="span-accent">está la verdadera pregunta:</span> ¿este
+              enfoque de repetición y memorización nos ayuda a comprender
+              realmente la materia? El consenso académico actual es que no. En
+              realidad, lo que es más importante que cualquier tema individual
+              es saber cómo estudiar, pero por alguna razón, este punto a menudo
+              se pasa por alto. Entonces, ¿qué podemos hacer para remediarlo?
+            </p>
+            <p class="two-columns__paragraph">
+              Bien, hay varias técnicas y ejercicios que pueden aplicarse al
+              proceso educativo para ayudar a hacerlo más eficiente y atractivo.
+              Continúa avanzando para descubrir algunos de los secretos del
+              aprendizaje eficaz.
+            </p>
+          </div>
+        </div>
       </section>
       <section class="digits">
-      <h2 class="section__title" > Datos y figuras</h2>
-      <h3 class="section__subtitle" >El aprendizaje y el cerebro </h3>
-      <ul class="table" >
-       <li class="table__cell" >
-        <h4 class="table__heading" > 86 billones </h4>
-        <p class="table__text" >número de neuronas en el cerebro humano</p> 
-        </li>
-         <li class="table__cell">
-          <h5 class="table__heading">73 %</h5>
-          <p class="table__text"> Porcentaje de adultos en EE. UU. que se consideran alumnos de por vida </p>
-          <p> - Pew Research Center</p>
-        </li>
-        <li class="table__cell"> 
-        <h6 class="table__heading"> 1000 terabytes</h6>
-        <p class="table__text" > La capacidad de almacenamiento de información de un ser humano</p>
-        </li>
-        <li class="table__cell"> 
-        <h7 class="table__heading"> 500 trillones</h7>
-        <p class="table__text" > El número de sinapsis nerviosas responsables del aprendizaje en un ser humano adulto medio</p>
-        </li>
-        <li class="table__cell"> 
-          <h8 class="table__heading"> 420 millones</h8>
-          <p class="table__text" > El número de adultos menores de 25 años con una educación insuficiente para encontrar empleo. </p>
-            <p> Banco Mundial, 2017</p>
-          
+        <h2 class="section__title">Datos y figuras</h2>
+        <h3 class="section__subtitle">El aprendizaje y el cerebro</h3>
+        <ul class="table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 billones</h4>
+            <p class="table__text">número de neuronas en el cerebro humano</p>
           </li>
-          <li class="table__cell"> 
-            <h9 class="table__heading"> 26 años</h9>
-            <p class="table__text" > La edad a la que Albert Einstein publicó su innovador artículo sobre la relatividad especial</p>
-            </li>
-            <li class="table__cell"> 
-              <h10 class="table__heading"> 1885</h10>
-              <p class="table__text" > Desarrollo de la curva del olvido</p>
-              </li>
-              <li class="table__cell"> 
-                <h11 class="table__heading"> 1897</h11>
-                <p class="table__text" > Publicación de las investigaciones de Ivan Pavlov sobre el condicionamiento clásico</p>
-                </li>
-              </ul>
+          <li class="table__cell">
+            <h5 class="table__heading">73 %</h5>
+            <p class="table__text">
+              Porcentaje de adultos en EE. UU. que se consideran alumnos de por
+              vida
+            </p>
+            <p>- Pew Research Center</p>
+          </li>
+          <li class="table__cell">
+            <h6 class="table__heading">1000 terabytes</h6>
+            <p class="table__text">
+              La capacidad de almacenamiento de información de un ser humano
+            </p>
+          </li>
+          <li class="table__cell">
+            <h7 class="table__heading">500 trillones</h7>
+            <p class="table__text">
+              El número de sinapsis nerviosas responsables del aprendizaje en un
+              ser humano adulto medio
+            </p>
+          </li>
+          <li class="table__cell">
+            <h8 class="table__heading"> 420 millones</h8>
+            <p class="table__text">
+              El número de adultos menores de 25 años con una educación
+              insuficiente para encontrar empleo.
+            </p>
+            <p>Banco Mundial, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h9 class="table__heading">26 años</h9>
+            <p class="table__text">
+              La edad a la que Albert Einstein publicó su innovador artículo
+              sobre la relatividad especial
+            </p>
+          </li>
+          <li class="table__cell">
+            <h10 class="table__heading">1885</h10>
+            <p class="table__text">Desarrollo de la curva del olvido</p>
+          </li>
+          <li class="table__cell">
+            <h11 class="table__heading">1897</h11>
+            <p class="table__text">
+              Publicación de las investigaciones de Ivan Pavlov sobre el
+              condicionamiento clásico
+            </p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
-      <h2 class="feynman__title" >La técnica Feynman</h2>
-      <h3 class="feynman__subtitle"> Aprender sin olvidar</h3>
-      <a  href="#" class="feynman__link" > mas → </a>
-      <img  class="feynman__photo" src="images/feynman.png" alt="feynman primer plano" >
-      <div class="feynman__circle" ></div>
+        <h1 class="feynman__title">La técnica Feynman</h1>
+        <a href="#" class="feynman__link"> mas → </a>
+        <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
+        <div class="feynman__circle" alt="circulo azul detras de feynman"></div>
+        <img
+          class="feynman__photo"
+          src="images/feynman.png"
+          alt="feynman primer plano"
+        />
       </section>
 
       <section class="kaufman">
+        <h2 class="kaufman__title_theme_dark">
+          Diez principios para adquirir habilidades rápidamente
+        </h2>
+        <h3 class="kaufman__subtitle_theme_dark">por Josh Kaufman</h3>
+        <ul class="table__theme_dark">
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">1</h3>
+            <p class="table__text_theme_dark">Elegir un proyecto atractivo</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">2</h3>
+            <p class="table__text_theme_dark">
+              Enfocar tu energía en una habilidad a la vez
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">3</h3>
+            <p class="table__text_theme_dark">Definir tu nivel de desempeño</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">4</h3>
+            <p class="table__text_theme_dark">
+              Deconstruir la habilidad en sub-habilidades
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">5</h3>
+            <p class="table__text_theme_dark">Obtener herramientas críticas</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">6</h3>
+            <p class="table__text_theme_dark">
+              Eliminar los obstáculos que impiden la práctica
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">7</h3>
+            <p class="table__text_theme_dark">Dedicar tiempo a la práctica</p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">8</h3>
+            <p class="table__text_theme_dark">
+              Crear bucles de retroalimentación rápidos
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">9</h3>
+            <p class="table__text_theme_dark">
+              Practicar en breves intervalos con un reloj
+            </p>
+          </li>
+          <li class="table__cell_theme_dark">
+            <h3 class="table__heading_theme_dark">10</h3>
+            <p class="table__text_theme_dark">
+              Enfatizar la cantidad y la velocidad
+            </p>
+          </li>
+        </ul>
+        <img
+          class="kaufman__triangle"
+          src="images/kaufman-triangle.svg"
+          alt="Un gran triángulo azul, sobre el que
+       Josh Kaufman reclama la propiedad"
+        />
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column-content-copyright">
+          <img
+            class="logo_place_footer"
+            src="images/logo_place_footer.png"
+            alt="loto Tripleten"
+          />
+          <p class="copyrights__author">&copy; 2023 Andres Rojas</p>
+        </div>
+        <div class="footer__column-content-about">
+          <h3 class="footer__column-heading">Acerca de Practicum</h3>
+          <ul class="footer__column-cell">
+            <li class="footer__text list__text1">Página principal</li>
+            <li class="footer__text list__text2">Misión</li>
+            <li class="footer__text list__text3">Profesiones</li>
+          </ul>
+        </div>
+        <div class="footer__column-content-social">
+          <h3 class="footer__column-heading">Redes sociales</h3>
+          <ul class="footer__column-cell">
+            <li class="footer__text column__link">
+              <img
+                class="footer__social-icons"
+                src="images/facebook_white.svg"
+                alt="logo de Facebook"
+              />
+              <span>Facebook</span>
+            </li>
+            <li class="footer__text column__link">
+              <img
+                class="footer__social-icons"
+                src="images/instagram_white.svg"
+                alt="logo de Instagram"
+              />
+              <span>Instagram</span>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
-  </div>
-</body>
+  </body>
 </html>
