--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,7 @@
         <h2 class="header__subtitle">
           Las técnicas de aprendizaje más eficaces y avanzadas que puedes
           aplicar en tu vida diaria.
-          <a href="#" class="header__link"> mas informacion → </a>
+          <a href="#" class="header__link"> Más información → </a>
         </h2>
         <img
           class="header__main-illustration"
@@ -63,15 +63,15 @@
         </div>
       </section>
       <section class="digits">
-        <h2 class="section__title">Datos y figuras</h2>
-        <h3 class="section__subtitle">El aprendizaje y el cerebro</h3>
+        <h2 class="section-title">Datos y figuras</h2>
+        <h3 class="section-subtitle">El aprendizaje y el cerebro</h3>
         <ul class="table">
           <li class="table__cell">
             <h4 class="table__heading">86 billones</h4>
             <p class="table__text">número de neuronas en el cerebro humano</p>
           </li>
           <li class="table__cell">
-            <h5 class="table__heading">73 %</h5>
+            <h4 class="table__heading">73 %</h4>
             <p class="table__text">
               Porcentaje de adultos en EE. UU. que se consideran alumnos de por
               vida
@@ -79,20 +79,20 @@
             <p>- Pew Research Center</p>
           </li>
           <li class="table__cell">
-            <h6 class="table__heading">1000 terabytes</h6>
+            <h4 class="table__heading">1000 terabytes</h4>
             <p class="table__text">
               La capacidad de almacenamiento de información de un ser humano
             </p>
           </li>
           <li class="table__cell">
-            <h7 class="table__heading">500 trillones</h7>
+            <h4 class="table__heading">500 trillones</h4>
             <p class="table__text">
               El número de sinapsis nerviosas responsables del aprendizaje en un
               ser humano adulto medio
             </p>
           </li>
           <li class="table__cell">
-            <h8 class="table__heading"> 420 millones</h8>
+            <h4 class="table__heading">420 millones</h4>
             <p class="table__text">
               El número de adultos menores de 25 años con una educación
               insuficiente para encontrar empleo.
@@ -100,18 +100,18 @@
             <p>Banco Mundial, 2017</p>
           </li>
           <li class="table__cell">
-            <h9 class="table__heading">26 años</h9>
+            <h4 class="table__heading">26 años</h4>
             <p class="table__text">
               La edad a la que Albert Einstein publicó su innovador artículo
               sobre la relatividad especial
             </p>
           </li>
           <li class="table__cell">
-            <h10 class="table__heading">1885</h10>
+            <h4 class="table__heading">1885</h4>
             <p class="table__text">Desarrollo de la curva del olvido</p>
           </li>
           <li class="table__cell">
-            <h11 class="table__heading">1897</h11>
+            <h4 class="table__heading">1897</h4>
             <p class="table__text">
               Publicación de las investigaciones de Ivan Pavlov sobre el
               condicionamiento clásico
@@ -212,9 +212,9 @@
         <div class="footer__column-content-about">
           <h3 class="footer__column-heading">Acerca de Practicum</h3>
           <ul class="footer__column-cell">
-            <li class="footer__text list__text1">Página principal</li>
-            <li class="footer__text list__text2">Misión</li>
-            <li class="footer__text list__text3">Profesiones</li>
+            <p class="footer__text list__text1">Página principal</p>
+            <p class="footer__text list__text2">Misión</p>
+            <p class="footer__text list__text3">Profesiones</p>
           </ul>
         </div>
         <div class="footer__column-content-social">
