--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
       <section class="feynman">
         <h1 class="feynman__title">La técnica Feynman</h1>
-        <a href="#" class="feynman__link"> mas → </a>
+        <a href="#" class="feynman__link"> Más → </a>
         <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
         <div class="feynman__circle" alt="circulo azul detras de feynman"></div>
         <img
