--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
             height="315"
             src="https://www.youtube.com/embed/5MgBikgcWnY?si=LIFjd8aF5qRl6EwS"
             title="YouTube video player"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media;
            gyroscope; picture-in-picture; web-share"
             allowfullscreen
-          ></iframe>
+          >
+          </iframe>
           <iframe
             width="560"
             height="315"
             src="https://www.youtube.com/embed/arj7oStGLkU?si=2RLa3rrUGiGmkG8p"
             title="YouTube video player"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
            gyroscope; picture-in-picture; web-share"
             allowfullscreen
-          ></iframe>
+          >
+          </iframe>
         </div>
       </section>
       <section class="oakley">
@@ -200,10 +200,10 @@
         </div>
       </section>
       <section class="feynman">
-        <h1 class="feynman__title">La técnica Feynman</h1>
+        <h2 class="feynman__title">La técnica Feynman</h2>
         <a href="#" class="feynman__link"> Más → </a>
-        <h2 class="feynman__subtitle">Aprender sin olvidar</h2>
-        <div class="feynman__circle" alt="circulo azul detras de feynman"></div>
+        <h3 class="feynman__subtitle">Aprender sin olvidar</h3>
+        <div class="feynman__circle"></div>
         <img
           class="feynman__photo"
           src="images/feynman.png"
@@ -408,9 +408,9 @@
         <div class="footer__column-content-about">
           <h3 class="footer__column-heading">Acerca de Practicum</h3>
           <ul class="footer__column-cell">
-            <p class="footer__text list__text1">Página principal</p>
-            <p class="footer__text list__text2">Misión</p>
-            <p class="footer__text list__text3">Profesiones</p>
+            <li class="footer__text list__text1">Página principal</li>
+            <li class="footer__text list__text2">Misión</li>
+            <li class="footer__text list__text3">Profesiones</li>
           </ul>
         </div>
         <div class="footer__column-content-social">
