--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <img
-          class="logo_place_header"
+          class="logo__place_header"
           src="images/logo_place_header.png"
           alt="logo Tripleten"
         />
@@ -293,60 +293,68 @@
         </div>
       </section>
       <section class="kaufman">
-        <h2 class="kaufman__title_theme_dark">
+        <h2 class="kaufman-title__theme_dark">
           Diez principios para adquirir habilidades rápidamente
         </h2>
-        <h3 class="kaufman__subtitle_theme_dark">por Josh Kaufman</h3>
-        <ul class="table__theme_dark">
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">1</h3>
-            <p class="table__text_theme_dark">Elegir un proyecto atractivo</p>
+        <h3 class="kaufman-subtitle__theme_dark">por Josh Kaufman</h3>
+        <ul class="table table__theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">
+              Elegir un proyecto atractivo
+            </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">2</h3>
-            <p class="table__text_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">
               Enfocar tu energía en una habilidad a la vez
             </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">3</h3>
-            <p class="table__text_theme_dark">Definir tu nivel de desempeño</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">
+              Definir tu nivel de desempeño
+            </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">4</h3>
-            <p class="table__text_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">
               Deconstruir la habilidad en sub-habilidades
             </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">5</h3>
-            <p class="table__text_theme_dark">Obtener herramientas críticas</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">
+              Obtener herramientas críticas
+            </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">6</h3>
-            <p class="table__text_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__headingtable__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">
               Eliminar los obstáculos que impiden la práctica
             </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">7</h3>
-            <p class="table__text_theme_dark">Dedicar tiempo a la práctica</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">
+              Dedicar tiempo a la práctica
+            </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">8</h3>
-            <p class="table__text_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">
               Crear bucles de retroalimentación rápidos
             </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">9</h3>
-            <p class="table__text_theme_dark">
+          <li class="table__cellm table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">
               Practicar en breves intervalos con un reloj
             </p>
           </li>
-          <li class="table__cell_theme_dark">
-            <h3 class="table__heading_theme_dark">10</h3>
-            <p class="table__text_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">
               Enfatizar la cantidad y la velocidad
             </p>
           </li>
