21 de octubre actualizacion

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <img
-          class="logo__place_header"
+          class="logo_place_header"
           src="images/logo_place_header.png"
           alt="logo Tripleten"
         />
@@ -293,11 +293,13 @@
         </div>
       </section>
       <section class="kaufman">
-        <h2 class="kaufman-title__theme_dark">
+        <h2 class="kaufman-title kaufman-title_theme_dark">
           Diez principios para adquirir habilidades rápidamente
         </h2>
-        <h3 class="kaufman-subtitle__theme_dark">por Josh Kaufman</h3>
-        <ul class="table table__theme_dark">
+        <h3 class="kaufman-subtitle kaufman-subtitle_theme_dark">
+          por Josh Kaufman
+        </h3>
+        <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">
@@ -329,7 +331,7 @@
             </p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h3 class="table__headingtable__heading_theme_dark">6</h3>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">
               Eliminar los obstáculos que impiden la práctica
             </p>
@@ -346,7 +348,7 @@
               Crear bucles de retroalimentación rápidos
             </p>
           </li>
-          <li class="table__cellm table__cell_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">
               Practicar en breves intervalos con un reloj
@@ -407,18 +409,18 @@
       <div class="footer__columns">
         <div class="footer__column-content-copyright">
           <img
-            class="logo_place_footer"
+            class="logo__place_footer"
             src="images/logo_place_footer.png"
             alt="loto Tripleten"
           />
-          <p class="copyrights__author">&copy; 2023 Andres Rojas</p>
+          <p class="footer__author">&copy; 2023 Andres Rojas</p>
         </div>
         <div class="footer__column-content-about">
           <h3 class="footer__column-heading">Acerca de Practicum</h3>
           <ul class="footer__column-cell">
-            <li class="footer__text list__text1">Página principal</li>
-            <li class="footer__text list__text2">Misión</li>
-            <li class="footer__text list__text3">Profesiones</li>
+            <li class="footer__text list__text">Página principal</li>
+            <li class="footer__text list__texta">Misión</li>
+            <li class="footer__text list__texta2">Profesiones</li>
           </ul>
         </div>
         <div class="footer__column-content-social">
