--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <img
-          class="logo_place_header"
+          class="logo__place_header"
           src="images/logo_place_header.png"
           alt="logo Tripleten"
         />
@@ -415,17 +415,17 @@
           />
           <p class="footer__author">&copy; 2023 Andres Rojas</p>
         </div>
-        <div class="footer__column-content-about">
+        <div class="footer__column content-about">
           <h3 class="footer__column-heading">Acerca de Practicum</h3>
-          <ul class="footer__column-cell">
+          <ul class="footer__cell">
             <li class="footer__text list__text">Página principal</li>
             <li class="footer__text list__texta">Misión</li>
             <li class="footer__text list__texta2">Profesiones</li>
           </ul>
         </div>
-        <div class="footer__column-content-social">
+        <div class="footer__column content-social">
           <h3 class="footer__column-heading">Redes sociales</h3>
-          <ul class="footer__column-cell">
+          <ul class="footer__cell">
             <li class="footer__text column__link">
               <img
                 class="footer__social-icons"
