--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <img
-          class="logo__place_header"
+          class="logo__place-header"
           src="images/logo_place_header.png"
           alt="logo Tripleten"
         />
@@ -213,54 +213,56 @@
       <section class="digits">
         <h2 class="section-title">Datos y figuras</h2>
         <h3 class="section-subtitle">El aprendizaje y el cerebro</h3>
-        <ul class="table">
-          <li class="table__cell">
-            <h4 class="table__heading">86 billones</h4>
-            <p class="table__text">número de neuronas en el cerebro humano</p>
+        <ul class="digits__table">
+          <li class="digits__table_cell">
+            <h4 class="digits__table_heading">86 billones</h4>
+            <p class="digits__table_text">
+              número de neuronas en el cerebro humano
+            </p>
           </li>
-          <li class="table__cell">
-            <h4 class="table__heading">73 %</h4>
-            <p class="table__text">
+          <li class="digits__table_cell">
+            <h4 class="digits__table_heading">73 %</h4>
+            <p class="digits__table_text">
               Porcentaje de adultos en EE. UU. que se consideran alumnos de por
               vida
             </p>
             <p>- Pew Research Center</p>
           </li>
-          <li class="table__cell">
-            <h4 class="table__heading">1000 terabytes</h4>
-            <p class="table__text">
+          <li class="digits__table_cell">
+            <h4 class="digits__table_heading">1000 terabytes</h4>
+            <p class="digits__table_text">
               La capacidad de almacenamiento de información de un ser humano
             </p>
           </li>
-          <li class="table__cell">
-            <h4 class="table__heading">500 trillones</h4>
-            <p class="table__text">
+          <li class="digits__table_cell">
+            <h4 class="digits__table_heading">500 trillones</h4>
+            <p class="digits__table_text">
               El número de sinapsis nerviosas responsables del aprendizaje en un
               ser humano adulto medio
             </p>
           </li>
-          <li class="table__cell">
-            <h4 class="table__heading">420 millones</h4>
-            <p class="table__text">
+          <li class="digits__table_cell">
+            <h4 class="digits__table_heading">420 millones</h4>
+            <p class="digits__table_text">
               El número de adultos menores de 25 años con una educación
               insuficiente para encontrar empleo.
             </p>
             <p>Banco Mundial, 2017</p>
           </li>
-          <li class="table__cell">
-            <h4 class="table__heading">26 años</h4>
-            <p class="table__text">
+          <li class="digits__table_cell">
+            <h4 class="digits__table_heading">26 años</h4>
+            <p class="digits__table_text">
               La edad a la que Albert Einstein publicó su innovador artículo
               sobre la relatividad especial
             </p>
           </li>
-          <li class="table__cell">
-            <h4 class="table__heading">1885</h4>
-            <p class="table__text">Desarrollo de la curva del olvido</p>
+          <li class="digits__table_cell">
+            <h4 class="digits__table_heading">1885</h4>
+            <p class="digits__table_text">Desarrollo de la curva del olvido</p>
           </li>
-          <li class="table__cell">
-            <h4 class="table__heading">1897</h4>
-            <p class="table__text">
+          <li class="digits__table_cell">
+            <h4 class="digits__table_heading">1897</h4>
+            <p class="digits__table_text">
               Publicación de las investigaciones de Ivan Pavlov sobre el
               condicionamiento clásico
             </p>
@@ -409,7 +411,7 @@
       <div class="footer__columns">
         <div class="footer__column-content-copyright">
           <img
-            class="logo__place_footer"
+            class="logo__place-footer"
             src="images/logo_place_footer.png"
             alt="loto Tripleten"
           />
@@ -418,15 +420,15 @@
         <div class="footer__column content-about">
           <h3 class="footer__column-heading">Acerca de Practicum</h3>
           <ul class="footer__cell">
-            <li class="footer__text list__text">Página principal</li>
-            <li class="footer__text list__texta">Misión</li>
-            <li class="footer__text list__texta2">Profesiones</li>
+            <li class="footer__text">Página principal</li>
+            <li class="footer__text">Misión</li>
+            <li class="footer__text">Profesiones</li>
           </ul>
         </div>
         <div class="footer__column content-social">
           <h3 class="footer__column-heading">Redes sociales</h3>
           <ul class="footer__cell">
-            <li class="footer__text column__link">
+            <li class="footer__cell-text">
               <img
                 class="footer__social-icons"
                 src="images/facebook_white.svg"
@@ -434,7 +436,7 @@
               />
               <span>Facebook</span>
             </li>
-            <li class="footer__text column__link">
+            <li class="footer__cell-text">
               <img
                 class="footer__social-icons"
                 src="images/instagram_white.svg"
