--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <img
-          class="logo__place-header"
+          class="logo_place-header"
           src="images/logo_place_header.png"
           alt="logo Tripleten"
         />
@@ -428,22 +428,22 @@
         <div class="footer__column content-social">
           <h3 class="footer__column-heading">Redes sociales</h3>
           <ul class="footer__cell">
-            <li class="footer__cell-text">
+            <div class="footer__cell-text">
               <img
                 class="footer__social-icons"
                 src="images/facebook_white.svg"
                 alt="logo de Facebook"
               />
               <span>Facebook</span>
-            </li>
-            <li class="footer__cell-text">
+            </div>
+            <div class="footer__cell-text">
               <img
                 class="footer__social-icons"
                 src="images/instagram_white.svg"
                 alt="logo de Instagram"
               />
               <span>Instagram</span>
-            </li>
+            </div>
           </ul>
         </div>
       </div>
