--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aprender a aprender</title>
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <div class="page">
@@ -73,8 +73,7 @@
               <img
                 class="cards__image"
                 src="images/cards-attention.png"
-                alt="100 maneras de pensar distinto"
-              />
+                alt="100 maneras de pensar distinto">
             </div>
             <h4 class="cards__title">Piensa de dos maneras distintas</h4>
             <div class="content">
@@ -89,8 +88,7 @@
               <img
                 class="cards__image"
                 src="images/cards-competence.png"
-                alt="estatua recordando algo"
-              />
+                alt="estatua recordando algo">
             </div>
             <h4 class="cards__title">Usa el recuerdo</h4>
             <div class="content">
@@ -105,8 +103,7 @@
               <img
                 class="cards__image"
                 src="images/cards-interleaving.png"
-                alt="plazoleta cubierta por techo de vigas"
-              />
+                alt="plazoleta cubierta por techo de vigas">
             </div>
             <h4 class="cards__title">Alterna</h4>
             <div class="content">
@@ -121,8 +118,7 @@
               <img
                 class="cards__image"
                 src="images/cards-question.png"
-                alt="muchas ventas dentro de un edificio"
-              />
+                alt="muchas ventas dentro de un edificio">
             </div>
             <h4 class="cards__title">Haz preguntas</h4>
             <div class="content">
@@ -137,8 +133,7 @@
               <img
                 class="cards__image"
                 src="images/cards-competence.png"
-                alt="mano sosteniendo libros de diferente clase"
-              />
+                alt="mano sosteniendo libros de diferente clase">
             </div>
             <h4 class="cards__title">Crea la ilusión de competencia</h4>
             <div class="content">
@@ -162,8 +157,7 @@
             title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media;
            gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          >
+            allowfullscreen>
           </iframe>
           <iframe
             width="560"
@@ -172,8 +166,7 @@
             title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
            gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          >
+            allowfullscreen>
           </iframe>
         </div>
       </section>
@@ -207,8 +200,7 @@
         <img
           class="feynman__photo"
           src="images/feynman.png"
-          alt="feynman primer plano"
-        />
+          alt="feynman primer plano">
       </section>
       <section class="digits">
         <h2 class="section-title">Datos y figuras</h2>
@@ -288,8 +280,7 @@
             <img
               class="khan__book-pic"
               src="images/khan-book-2.png"
-              alt="libro escrito por el autor khan"
-            />
+              alt="libro escrito por el autor khan">
             <a href="#" class="khan__buy-link"> Comprar libro→ </a>
           </div>
         </div>
@@ -367,8 +358,7 @@
           class="kaufman__triangle"
           src="images/kaufman-triangle.svg"
           alt="Un gran triángulo azul, sobre el que
-       Josh Kaufman reclama la propiedad"
-        />
+           Josh Kaufman reclama la propiedad">
       </section>
       <section class="resources">
         <h2 class="resources__title">Recursos útiles</h2>
@@ -380,29 +370,25 @@
             <img
               class="resources__logo-link"
               src="images/resources-tedED.png"
-              alt="Ted logo"
-            />
+              alt="Ted logo">
           </a>
           <a class="resources__logo-link" href="https://medium.com/">
             <img
               class="resources__logo-link"
               src="images/resources-Medium.png"
-              alt="Medium logo"
-            />
+              alt="Medium logo">
           </a>
           <a class="resources__logo-link" href="https://www.dezeen.com/">
             <img
               class="resources__logo-link"
               src="images/resources-dezeen.png"
-              alt="Dezeen logo"
-            />
+              alt="Dezeen logo">
           </a>
           <a class="resources__logo-link" href="https://www.goodreads.com/">
             <img
               class="resources__logo-link"
               src="images/resources-goodreads.png"
-              alt="Goodreads logo"
-            />
+              alt="Goodreads logo">
           </a>
         </div>
       </section>
@@ -413,8 +399,7 @@
           <img
             class="logo__place-footer"
             src="images/logo_place_footer.png"
-            alt="loto Tripleten"
-          />
+            alt="loto Tripleten">
           <p class="footer__author">&copy; 2023 Andres Rojas</p>
         </div>
         <div class="footer__column content-about">
@@ -428,22 +413,20 @@
         <div class="footer__column content-social">
           <h3 class="footer__column-heading">Redes sociales</h3>
           <ul class="footer__cell">
-            <div class="footer__cell-text">
+            <li class="footer__cell-text">
               <img
                 class="footer__social-icons"
                 src="images/facebook_white.svg"
-                alt="logo de Facebook"
-              />
+                alt="logo de Facebook">
               <span>Facebook</span>
-            </div>
-            <div class="footer__cell-text">
+            </li>
+            <li class="footer__cell-text">
               <img
                 class="footer__social-icons"
                 src="images/instagram_white.svg"
-                alt="logo de Instagram"
-              />
+                alt="logo de Instagram">
               <span>Instagram</span>
-            </div>
+            </li>
           </ul>
         </div>
       </div>
