--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <img
           class="logo_place-header"
           src="images/logo_place_header.png"
-          alt="logo Tripleten"
-        />
+          alt="logo Tripleten">
         <h1 class="header__title">Aprender a aprender</h1>
         <h2 class="header__subtitle">
           Las técnicas de aprendizaje más eficaces y avanzadas que puedes
@@ -24,8 +23,7 @@
         <img
           class="header__main-illustration"
           src="images/header-image.png"
-          alt="persona parada sobre una montaña"
-        />
+          alt="persona parada sobre una montaña">
         <div class="header__square"></div>
       </header>
     </div>
