--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <img
-          class="logo_place_header"
+          class="logo logo_place_header"
           src="images/logo_place_header.png"
           alt="logo Tripleten">
         <h1 class="header__title">Aprender a aprender</h1>
@@ -395,7 +395,7 @@
       <div class="footer__columns">
         <div class="footer__column-content-copyright">
           <img
-            class="logo__place-footer"
+            class="logo__place_footer"
             src="images/logo_place_footer.png"
             alt="loto Tripleten">
           <p class="footer__author">&copy; 2023 Andres Rojas</p>
