--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
       <div class="footer__columns">
         <div class="footer__column-content-copyright">
           <img
-            class="logo__place_footer"
+            class="logo logo_place_footer"
             src="images/logo_place_footer.png"
             alt="loto Tripleten">
           <p class="footer__author">&copy; 2023 Andres Rojas</p>
