--- a/index.html
+++ b/index.html
@@ -67,80 +67,60 @@
         </h3>
         <div class="cards">
           <article class="cards__item">
-            <div>
               <img
                 class="cards__image"
                 src="images/cards-attention.png"
                 alt="100 maneras de pensar distinto">
-            </div>
             <h4 class="cards__title">Piensa de dos maneras distintas</h4>
-            <div class="content">
-              <p class="cards__description">
+              <p class="content cards__description">
                 Un profundo conocimiento se puede lograr alternando libremente
                 entre el pensamiento concentrado y el difuso.
               </p>
-            </div>
           </article>
           <article class="cards__item">
-            <div>
               <img
                 class="cards__image"
                 src="images/cards-competence.png"
                 alt="estatua recordando algo">
-            </div>
             <h4 class="cards__title">Usa el recuerdo</h4>
-            <div class="content">
-              <p class="cards__description">
+              <p class="content cards__description">
                 Mejorar tu capacidad de recordar piezas clave de información
                 ayuda a conectar diferentes áreas del cerebro.
               </p>
-            </div>
           </article>
           <article class="cards__item">
-            <div>
               <img
                 class="cards__image"
                 src="images/cards-interleaving.png"
                 alt="plazoleta cubierta por techo de vigas">
-            </div>
             <h4 class="cards__title">Alterna</h4>
-            <div class="content">
-              <p class="cards__description">
+              <p class="content cards__description">
                 Cuando aprendes múltiples habilidades al mismo tiempo, estas se
                 refuerzan mutuamente.
               </p>
-            </div>
           </article>
           <article class="cards__item">
-            <div>
               <img
                 class="cards__image"
                 src="images/cards-question.png"
                 alt="muchas ventas dentro de un edificio">
-            </div>
             <h4 class="cards__title">Haz preguntas</h4>
-            <div class="content">
-              <p class="cards__description">
+              <p class="content cards__description">
                 Cuando escuches a tu profesor, piensa en una buena pregunta, en
                 algo que realmente te intrigue.
               </p>
-            </div>
           </article>
           <article class="cards__item">
-            <div>
               <img
                 class="cards__image"
                 src="images/cards-competence.png"
                 alt="mano sosteniendo libros de diferente clase">
-            </div>
             <h4 class="cards__title">Crea la ilusión de competencia</h4>
-            <div class="content">
-              <p class="cards__description">
+              <p class="content cards__description">
                 Ponte a prueba, apunta tu resultado, cuéntaselo a otras personas
                 y repite el proceso con diferentes configuraciones. Solo
                 entonces podrás estar seguro de haber comprendido algo.
               </p>
-            </div>
           </article>
         </div>
       </section>
@@ -400,30 +380,31 @@
             alt="loto Tripleten">
           <p class="footer__author">&copy; 2023 Andres Rojas</p>
         </div>
-        <div class="footer__column content-about">
+        <div class="footer__column_content-about">
           <h3 class="footer__column-heading">Acerca de Practicum</h3>
-          <ul class="footer__cell">
-            <li class="footer__text">Página principal</li>
-            <li class="footer__text">Misión</li>
-            <li class="footer__text">Profesiones</li>
+          <ul class="footer__list">
+            <li>  <a href="#" class="footer__column-link">Página principal</a></li>
+            <li>  <a href="#" class="footer__column-link">Misión</a></li>
+            <li>  <a href="#" class="footer__column-link">Profesiones</a></li>
           </ul>
         </div>
-        <div class="footer__column content-social">
+        <div class="footer__column_content-social">
           <h3 class="footer__column-heading">Redes sociales</h3>
-          <ul class="footer__cell">
-            <li class="footer__cell-text">
+          <ul class="footer__social-icons">
+            <li><a class="footer__column-link " href="#">
               <img
-                class="footer__social-icons"
-                src="images/facebook_white.svg"
+                src="images/facebook_white.svg" 
                 alt="logo de Facebook">
               <span>Facebook</span>
-            </li>
-            <li class="footer__cell-text">
+            </img>
+          </a>
+          </li>
+            <li> <a class="footer__column-link" href="#"> 
               <img
-                class="footer__social-icons"
                 src="images/instagram_white.svg"
                 alt="logo de Instagram">
               <span>Instagram</span>
+            </a> 
             </li>
           </ul>
         </div>
